Add new packages for deep reflection within the surefire.system.args for test compatibility with JDK17
Similar to the fix we did for LDAP tests which were failing with JDK17 in the PR 
#9980, we need additional packages to be added within those args to allow deep reflection which supports the marshaling of Map behind the system env variables, as part of some tests

Closes #14997